--- a/www/templates/class-detail.html
+++ b/www/templates/class-detail.html
@@ -21,16 +21,12 @@
       </div>
     </div>
     <div class="list card">
-      <div class="item item-divider">Upcoming Assignments</div>
-      <div class="item item-body">
-        <!--
-        <ion-list>
-          <ion-item class="item-icon-right" ng-repeat="assignment in class.assignments" type="item-text-wrap" href="#/tab/assignments/{{ assignment.id }}">
-            <h2>{{ assignment.name }}</h2>
-            <i class="icon ion-chevron-right icon-accessory"></i>
-          </ion-item>
-        </ion-list>
-        -->
+      <div class="item item-divider">Assignments</div>
+      <div class="item item-body assignment-items">
+        <ion-item class="item-icon-right" ng-repeat="assignment in class.assignments" type="item-text-wrap" href="#/tab/assignments/{{ assignment.id }}">
+          <div style="font-size: 14px;">{{ assignment.name }}</div>
+          <i class="icon ion-chevron-right icon-accessory"></i>
+        </ion-item>
       </div>
     </div>
   </ion-content>
