--- a/www/templates/class-detail.html
+++ b/www/templates/class-detail.html
@@ -1,7 +1,7 @@
 <ion-view view-title="{{ class.name }}">
   <ion-content class="padding">
     <div class="list card">
-      <div class="item item-divider">Meeting Times</div>
+      <div class="item item-divider">Meeting Time(s)</div>
       <div class="item item-body">
         <div ng-repeat="meetingTime in class.meetingTimes">
           <div>{{ getFormattedMeetingTime(meetingTime) }}</div>
