--- a/www/templates/class-detail.html
+++ b/www/templates/class-detail.html
@@ -29,5 +29,12 @@
         </ion-item>
       </div>
     </div>
+    <div class="list card">
+      <div class="item item-divider">Current Grade</div>
+      <div class="item item-body">
+        <div ng-if="calculateGrade() == 0">-</div>
+        <div ng-if="calculateGrade() > 0">{{ calculateGrade() }}</div>
+      </div>
+    </div>
   </ion-content>
 </ion-view>
