--- a/www/templates/tab-calendar.html
+++ b/www/templates/tab-calendar.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Calendar">
   <ion-content class="padding">
-    
+    <div ui-calendar="uiConfig.calendar" class="span8 calendar" ng-model="eventSources"></div>
   </ion-content>
 </ion-view>
