--- a/www/templates/tab-home.html
+++ b/www/templates/tab-home.html
@@ -1,4 +1,8 @@
 <ion-view view-title="Home">
+  <ion-nav-buttons side="secondary">
+    <button class="button button-icon icon ion-ios-plus-empty" ui-sref="tab.new-class">
+    </button>
+  </ion-nav-buttons>
   <ion-content>
     <ion-list>
       <ion-item class="item-avatar item-icon-right" ng-repeat="class in classes" type="item-text-wrap" href="#/tab/classes/{{ class.id }}">
