Fixed switching of calendar view type

--- a/www/templates/tab-calendar.html
+++ b/www/templates/tab-calendar.html
@@ -1,9 +1,9 @@
 <ion-view view-title="Calendar">
   <ion-content class="padding">
   	<div class="button-bar calendar-button-bar">
-	  	<a class="button" ng-class="{'activated' : selectedView == 'Month'}" ng-click="changeView('Month', 'classSchedule')">Month</a>
-	  	<a class="button" ng-class="{'activated' : selectedView == 'AgendaWeek'}" ng-click="changeView('AgendaWeek', 'classSchedule')">Week</a>
-	  	<a class="button" ng-class="{'activated' : selectedView == 'AgendaDay'}" ng-click="changeView('AgendaDay', 'classSchedule')">Day</a>
+	  	<a class="button" ng-class="{'activated' : selectedView == 'month'}" ng-click="changeView('month', 'classSchedule')">Month</a>
+	  	<a class="button" ng-class="{'activated' : selectedView == 'agendaWeek'}" ng-click="changeView('agendaWeek', 'classSchedule')">Week</a>
+	  	<a class="button" ng-class="{'activated' : selectedView == 'agendaDay'}" ng-click="changeView('agendaDay', 'classSchedule')">Day</a>
 	</div>
     <div ui-calendar="uiConfig.calendar" class="calendar" ng-model="eventSources" calendar="classSchedule"></div>
   </ion-content>
