Creating class works without meeting time
You can now create a class without a meeting time, next up is making a
meeting time.

--- a/www/templates/new-class.html
+++ b/www/templates/new-class.html
@@ -20,7 +20,7 @@
         </label>
       </div>
       <div class="padding">
-        <button ng-click="createClass(class)" class="button button-block button-positive">Create Class</button>
+        <button ng-disabled="classForm.$invalid" ng-click="createClass(class)" class="button button-block button-positive">Create Class</button>
       </div>
     </form>
   </ion-content>
