--- a/www/templates/tab-home.html
+++ b/www/templates/tab-home.html
@@ -5,7 +5,7 @@
   </ion-nav-buttons>
   <ion-content>
     <ion-list>
-      <ion-item class="item-avatar item-icon-right" ng-repeat="class in classes" type="item-text-wrap" href="#/tab/classes/{{ class.id }}">
+      <ion-item class="item-avatar item-icon-right" ng-repeat="class in classes track by $index" type="item-text-wrap" href="#/tab/classes/{{ class.id }}">
         <div class="color-label class-color-label" ng-style="{ 'background-color': class.color }"></div>
         <h2>{{ class.name }}</h2>
         <p>{{ getNextMeetingTime(class) }}</p>
