--- a/www/templates/tab-home.html
+++ b/www/templates/tab-home.html
@@ -1,7 +1,6 @@
 <ion-view view-title="Home">
   <ion-nav-buttons side="secondary">
-    <button class="button button-icon icon ion-ios-plus-empty" ui-sref="tab.new-class">
-    </button>
+    <button class="button button-icon icon ion-ios-plus-empty" ui-sref="tab.new-class"></button>
   </ion-nav-buttons>
   <ion-content>
     <ion-list>
