--- a/www/templates/new-class.html
+++ b/www/templates/new-class.html
@@ -3,7 +3,7 @@
     <form name="classForm" class="form-group">
       <div class="list">
         <label class="item item-input item-stacked-label">
-          <span class="input-label">Class Name</span>
+          <span class="input-label">Name</span>
           <input type="text" ng-model="class.name" required />
         </label>
         <label class="item item-input item-stacked-label">
@@ -15,10 +15,8 @@
           <input type="text" ng-model="class.teacher" required />
         </label>
         <label class="item item-input item-select">
-          <div class="input-label">
-            Color
-          </div>
-          <select ng-model="class.color">
+          <div class="input-label">Color</div>
+          <select ng-model="class.color" required>
             <option>Aquamarine</option>
             <option>BlueViolet</option>
             <option>Crimson</option>
