--- a/www/templates/assignment-detail.html
+++ b/www/templates/assignment-detail.html
@@ -1,13 +1,13 @@
 <ion-view view-title="{{ assignment.name }}">
+  <ion-nav-buttons side="secondary">
+    <button class="button button-clear" ui-sref="tab.edit-assignment({assignmentId: assignment.id})">Edit</button>
+  </ion-nav-buttons>
   <ion-content class="padding assignment-detail">
     <h4>Class</h4>
     <p>{{ assignment.class.name }}</p>
 
     <h4>Due Date</h4>
-    <p>{{ assignment.dueDate.format('MMMM d, YYYY h:mm A') }}</p>
-
-    <h4>Reminder</h4>
-    <p></p>
+    <p>{{ assignment.dueDate | date:'MMMM d, yyyy h:mm a' }}</p>
 
     <h4>Additional Notes</h4>
     <p ng-if="assignments.notes">{{ assignment.notes }}</p>
