Final fixes, aded and fixed edits

--- a/www/templates/edit-assignment.html
+++ b/www/templates/edit-assignment.html
@@ -37,7 +37,7 @@
         </li>
         <label class="item item-input item-stacked-label">
           <span class="input-label">Grade</span>
-          <input type="number" ng-model="assignment.grade" required />
+          <input type="number" ng-model="assignment.grade" />
         </label>
       </div>
       <div class="padding">
