--- a/www/templates/assignment-detail.html
+++ b/www/templates/assignment-detail.html
@@ -1,10 +1,11 @@
-<ion-view view-title="{{ assignment.name }}">
+<ion-view view-title="{{ assignment.name }}" addBackButton>
+
   <ion-nav-buttons side="secondary">
     <button class="button button-clear" ui-sref="tab.edit-assignment({assignmentId: assignment.id})">Edit</button>
   </ion-nav-buttons>
   <ion-content class="padding assignment-detail">
     <h4>Class</h4>
-    <p>{{ assignment.class.name }}</p>
+    <p>{{ class.name }}</p>
 
     <h4>Due Date</h4>
     <p>{{ assignment.dueDate | date:'MMMM d, yyyy h:mm a' }}</p>
