--- a/www/templates/class-detail.html
+++ b/www/templates/class-detail.html
@@ -1,4 +1,7 @@
 <ion-view view-title="{{ class.name }}">
+  <ion-nav-buttons side="secondary">
+    <button class="button button-clear" ui-sref="tab.edit-class({classId: class.id})">Edit</button>
+  </ion-nav-buttons>
   <ion-content class="padding class-detail">
     <h4>Meeting Time(s)</h4>
     <p>
@@ -12,7 +15,7 @@
     <p>{{ class.teacher }}</p>
 
     <h4>Assignments</h4>
-    <ion-item class="item-icon-right" ng-repeat="assignment in class.assignments" type="item-text-wrap" href="#/tab/assignments/{{ assignment.id }}">
+    <ion-item class="item-icon-right" ng-repeat="assignment in class.assignments track by $index" type="item-text-wrap" ng-click="goToAssigment({{ assignment.id }})">
       <div style="font-size: 14px;">{{ assignment.name }}</div>
       <i class="icon ion-chevron-right icon-accessory"></i>
     </ion-item>
